# ai-crew

./: .env.example  .gitignore  README.md  c  context.json  pyproject.toml
autocrew/: __init__.py  autopilot.py  config.py  cursor_mode.py  main.py  planner.py  progress_log.py  security_audit.py  storage.py
autocrew/analyzer/: __init__.py  codebase_analyzer.py  idea_analyzer.py  litellm_chain.py  llm_client.py  model_registry.py  project_model.py  provider_tracker.py
autocrew/context/: __init__.py  path_filter.py
autocrew/crew/: __init__.py  build_rules.py  crew_logger.py  crew_runner.py  llm_task_executor.py  parallel_git.py  task_context.py
autocrew/debate/: __init__.py  convergence.py  critique_context.py  critique_schema.py  critique_types.py  debate_model.py  debate_runner.py  debate_tiers.py  heuristic_critique.py  model  model_router.py  (+3 more)
docs/: cursor-workflow.md  documentation.md
fixtures/: planity_remaining_tasks.json
output/: planity_clone_tasks.json  scout.json
scripts/: check_nvidia_api.py  model_diversity_eval.py  order_effect_eval.py
tests/: conftest.py  test_analyzer.py  test_autopilot.py  test_cli.py  test_codebase_analyzer.py  test_convergence.py  test_crew_runner.py  test_critique_context.py  test_cursor_mode.py  test_debate.py  test_debate_tiers.py  test_git_tools.py  test_llm_task_executor.py  test_metrics.py  test_model_diversity_eval.py  test_order_effect_eval.py  test_path_filter.py  test_per_agent_router.py  test_security_audit.py  test_squad_builder.py  test_tools_tracker.py  test_tracker_critique.py  test_worktree_recovery.py
(+47 files in other folders)
