[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocrew"
version = "0.1.0"
description = "AI Project Orchestrator — turns ideas or codebases into CrewAI squads and builds them"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.28",
    "crewai-tools>=0.1",
    "anthropic>=0.25",
    "openai>=1.30",
    "typer[all]>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "gitpython>=3.1",
    "pathspec>=0.12",
    "python-dotenv>=1.0",
    "litellm>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
autocrew = "autocrew.main:app"

[tool.hatch.build.targets.wheel]
packages = ["autocrew"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
